crates/fai-tests/tests/fixtures/errors/ContractNotBool.fai
module ContractNotBool

public n : Int
let n = 3

// A contract body must have type Bool; this is an Int.
//~ ERROR FAI3007
example: n + 1
